--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,33 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
-# Compiled output
+# ---- Angular ----
 /dist
 /tmp
 /out-tsc
 /bazel-out
 
-# Node
+# ---- Node ----
 /node_modules
 npm-debug.log
 yarn-error.log
+pnpm-debug.log
+package-lock.json
 
-# IDEs and editors
+# ---- Env Files ----
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ---- Logs ----
+logs
+*.log
+logs/*.log
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# ---- IDEs & Editors ----
 .idea/
 .project
 .classpath
@@ -20,7 +36,7 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# ---- VS Code ----
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -28,7 +44,7 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
+# ---- Misc ----
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -37,6 +53,6 @@ yarn-error.log
 testem.log
 /typings
 
-# System files
+# ---- System Files ----
 .DS_Store
 Thumbs.db
