--- a/package.json
+++ b/package.json
@@ -10,34 +10,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.0.4",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/material": "^20.0.4",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "@ngx-translate/core": "^16.0.4",
-    "@ngx-translate/http-loader": "^16.0.1",
-    "chart.js": "^4.5.0",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "ng2-charts": "^4.1.1",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/cdk": "20.1.6",
+    "@angular/common": "^20.1.6",
+    "@angular/compiler": "20.1.6",
+    "@angular/core": "20.1.6",
+    "@angular/forms": "^20.1.6",
+    "@angular/material": "20.1.6",
+    "@angular/platform-browser": "^20.1.6",
+    "@angular/router": "20.1.6",
+    "@ngx-translate/core": "16.0.4",
+    "@ngx-translate/http-loader": "16.0.1",
+    "bootstrap": "5.3.7",
+    "chart.js": "4.5.0",
+    "chartjs-plugin-datalabels": "2.2.0",
+    "ng2-charts": "4.1.1",
+    "rxjs": "7.8.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.0",
-    "@angular/cli": "^20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "@angular-devkit/build-angular": "^20.1.6",
+    "@angular/cli": "20.1.6",
+    "@angular/compiler-cli": "20.1.6",
+    "@types/jasmine": "5.1.0",
+    "jasmine-core": "5.7.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "typescript": "^5.8.2"
   }
 }
