--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "bootstrap": "5.3.7",
     "chart.js": "4.5.0",
     "chartjs-plugin-datalabels": "2.2.0",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "4.1.1",
     "rxjs": "7.8.0",
+    "sweetalert2": "^11.22.4",
     "tslib": "2.3.0",
     "zone.js": "0.15.0"
   },
