--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chartjs-plugin-datalabels": "2.2.0",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "4.1.1",
+    "ngx-cookie-service": "^20.1.0",
     "rxjs": "7.8.0",
     "sweetalert2": "^11.22.4",
     "tslib": "2.3.0",
