--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "@angular/material/prebuilt-themes/azure-blue.css"
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
